# prompt-bank

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  model-presets.yaml  package-lock.json  package.json  playwright.config.ts  schema.md  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: authoring.md
prompts/analysis/: compare-approaches.md
prompts/cli/: inspect-git-status.md
prompts/code/: explain-code.md  refactor-code.md
prompts/planning/: plan-a-task.md
prompts/review/: review-code-changes.md
prompts/writing/: summarize-text.md
scripts/: check-private-paths.ts  generate-icon.mjs  validate.ts
scripts/lib/: privatePaths.test.ts  privatePaths.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/prompt-bank-core/: Cargo.toml
src-tauri/crates/prompt-bank-core/src/: dto.rs  errors.rs  home.rs  lib.rs  prompt_fs.rs  registry.rs
src-tauri/crates/prompt-bank-core/tests/: dto.rs  home.rs  reader.rs  registry.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dto.rs  ipc_smoke.rs  main.rs  state.rs
src/components/: Composer.tsx  PromptDetail.tsx  PromptLibrary.test.tsx  PromptLibrary.tsx  WorkspaceTabs.tsx  WorkspaceView.tsx  promptUi.ts
src/data/: composer.test.ts  composer.ts  desktopClient.test.ts  desktopClient.ts  desktopCsp.test.ts  loaders.ts  schemas.ts
tests/: accessibility.spec.ts  functional.spec.ts  responsive.spec.ts  screenshots.spec.ts  workspaces.spec.ts
