[package]
name = "prompt-bank-desktop"
version = "0.1.0"
description = "Prompt Bank desktop application"
authors = ["Erdem Tuna"]
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
publish = false

[workspace]
members = ["crates/prompt-bank-core"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
prompt-bank-core = { path = "crates/prompt-bank-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
